plugins {
    id 'java-library'
    id 'maven-publish'
    id "org.sonarqube" version "3.3"
}

repositories {
    mavenLocal()
    mavenCentral()
}

group = 'org.core'
version = '1.0-SNAPSHOT'
description = 'TranslateCore'
java {
    sourceCompatibility = JavaLanguageVersion.of(11);
}

compileJava.options.encoding = 'UTF-8'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

sonarqube {
    properties {
        property "sonar.projectKey", "Minecraft-Ships_TranslateCore"
        property "sonar.organization", "minecraft-ships"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}

test {
    useJUnitPlatform()
}

dependencies {
    implementation group: 'net.kyori', name: 'examination-api', version: '1.1.0'
    implementation group: 'net.kyori', name: 'adventure-api', version: '4.12.0'
    implementation group: 'net.kyori', name: 'adventure-text-serializer-plain', version: '4.12.0'
    implementation group: 'net.kyori', name: 'adventure-text-serializer-legacy', version: '4.12.0'
    implementation group: 'net.kyori', name: 'adventure-text-serializer-gson', version: '4.12.0'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10'

    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.2.0'
    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.2.0'


    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.9.2'
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.9.2'

}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = project.group
            artifactId = project.name
            version = project.version

            from components.java
        }
    }
}
